--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -41,6 +41,7 @@ ul.nav-list li a {
     padding: 10px;
     width: 50px;
     height: 50px;
+    position: relative;
 }
 
 ul.nav-list li a span {
@@ -49,6 +50,20 @@ ul.nav-list li a span {
     font-size: 10px;
     text-align: center;
     margin-top: 2px;
+}
+
+ul.nav-list li a p {
+    position: absolute;
+    top: -5px;
+    left: 120px;
+    width: 75%;
+    background-color: aquamarine;
+    color: black;
+    font-size: 10px;
+    padding: 1px 3px;
+    border-radius: 2px;
+    margin: 0;
+    z-index: 10;
 }
 
 ul.nav-list li img {
@@ -123,6 +138,10 @@ ul.nav-list li img {
     cursor: pointer;
 }
 
+#Soon {
+    color: gray;
+}
+
 
 @media (max-width: 768px) {
     header {
@@ -161,6 +180,14 @@ ul.nav-list li img {
         width: 300px;
         text-align: center;
         color: white;
+    }
+
+    ul.nav-list li a p{
+        position: absolute;
+        top: -5%;
+        left: 20%;
+        width: 30px;
+        font-size: 8px;
     }
 }
 
@@ -224,5 +251,9 @@ ul.nav-list li img {
 
     header:hover .nav-list li a span {
         opacity: 1;
+    }
+
+    ul.nav-list li a p {
+        right: 35px;
     }
 }
