fix beug reset password

--- a/public/assets/css/forgot-password.css
+++ b/public/assets/css/forgot-password.css
@@ -74,14 +74,11 @@ a:hover {
     color: #80ffe6;
 }
 
-/* Style de la modal */
 .modal {
     position: fixed;
     top: 10%;
     left: 42%;
     width: 100%;
-   
-   
     display: flex;
     justify-content: center;
     align-items: center;
@@ -106,4 +103,9 @@ button {
 
 button:hover {
     background-color: #0056b3;
+}
+
+@media screen and (max-width: 780px) {  
+    .modal {
+        left:12%;     }
 }
