--- a/views/pages/forgot-password.twig
+++ b/views/pages/forgot-password.twig
@@ -21,15 +21,15 @@
 {% endblock %}
 
 {% block script %}
-<script src="/../../assets/js/error.js"></script>
-<script>
+<script type="module">
+    import { handleFetch } from '/../../assets/js/error.js';
        
-        document.getElementById('resetPasswordForm').addEventListener('submit', (event) => {
-            event.preventDefault(); 
+    document.getElementById('resetPasswordForm').addEventListener('submit', (event) => {
+        event.preventDefault(); 
 
-            const email = document.getElementById('email').value;
-        
-            handleFetch('/reset-password', { email });
-        });
-    </script>
+        const email = document.getElementById('email').value;
+    
+        handleFetch('/reset-password', { email });
+    });
+</script>
 {% endblock %}
