fix problem reset password

--- a/public/assets/css/reset-password.css
+++ b/public/assets/css/reset-password.css
@@ -73,3 +73,19 @@ a {
 a:hover {
     color: #80ffe6;
 }
+
+#successModal{
+    position: absolute;
+    top: 10%;
+    left: 42.5%;
+    width: 250px;
+    height: 200px;
+}
+
+#successMessage{
+    background-color: #1e1e1e;
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    text-align: center;
+}
