--- a/views/pages/reset-password.twig
+++ b/views/pages/reset-password.twig
@@ -9,16 +9,35 @@
 {% endblock %}
 
 {% block main %}
-
-	<form action="/reset-password" method="POST">
-		<input type="hidden" name="token" value="{{ token }}">
+	<form id="resetPasswordForm">
+		<input type="hidden" id="token" name="token" value="{{ token }}">
 		<label for="newPassword">Nouveau mot de passe :</label>
-		<input type="password" name="newPassword" placeholder="Entrez votre nouveau mot de passe" required>
+		<input type="password" id="newPassword" name="newPassword" placeholder="Entrez votre nouveau mot de passe" required>
 		<label for="confirmPassword">Confirmez le mot de passe :</label>
-		<input type="password" name="confirmPassword" placeholder="Confirmez votre mot de passe" required>
+		<input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirmez votre mot de passe" required>
 		<button type="submit">Réinitialiser le mot de passe</button>
 		<a href="/login">Annuler</a>
 	</form>
 
 	{% include "../partials/error.twig" %}
+{% endblock %}
+
+{% block script %}
+<script type="module">
+    import { handleFetch } from '/../../assets/js/error.js';
+
+    document.getElementById('resetPasswordForm').addEventListener('submit', (event) => {
+        event.preventDefault(); 
+
+        const token = document.getElementById('token').value;
+        const newPassword = document.getElementById('newPassword').value;
+        const confirmPassword = document.getElementById('confirmPassword').value;
+    
+        handleFetch('/reset-password', { 
+            token, 
+            newPassword, 
+            confirmPassword 
+        });
+    });
+</script>
 {% endblock %}
