--- a/public/assets/css/forgot-password.css
+++ b/public/assets/css/forgot-password.css
@@ -14,7 +14,7 @@ form {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.8);
-    max-width: 400px;
+    max-width: 365px;
     width: 100%;
 }
 
@@ -103,6 +103,17 @@ button {
 
 button:hover {
     background-color: #0056b3;
+}
+
+#successModal {
+    position: fixed;
+    top: 65%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+    max-width: 90%;
+    width: auto;
+    text-align: center;
 }
 
 @media screen and (max-width: 780px) {  
