--- a/public/assets/css/reset-password.css
+++ b/public/assets/css/reset-password.css
@@ -7,6 +7,7 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
     color: white;
+    flex-direction: column;
 }
 
 form {
@@ -14,7 +15,7 @@ form {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.8);
-    max-width: 400px;
+    max-width: 360px;
     width: 100%;
 }
 
@@ -74,18 +75,36 @@ a:hover {
     color: #80ffe6;
 }
 
-#successModal{
-    position: absolute;
-    top: 10%;
-    left: 42.5%;
-    width: 250px;
-    height: 200px;
+.modal-content{
+    background-color: #1e1e1e;
+    border: none;
+}
+
+.success-modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+    max-width: 90%;
+    width: auto;
+    text-align: center;
+}
+
+#successModal {
+    position: fixed;
+    top: 65%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+    max-width: 90%;
+    width: auto;
+    text-align: center;
 }
 
 #successMessage{
     background-color: #1e1e1e;
     color: white;
     padding: 10px;
-    border-radius: 5px;
     text-align: center;
 }
