add visible password for reset password

--- a/public/assets/css/reset-password.css
+++ b/public/assets/css/reset-password.css
@@ -40,6 +40,45 @@ input[type="password"]::placeholder {
     color: #aaa;
 }
 
+input[type="text"]:not(.form-control) {
+    font-family: inherit;
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #3d3d3d;
+    border-radius: 5px;
+    background-color: #1e1e1e;
+    color: white;
+    caret-color: white;
+}
+
+input[type="text"][id="newPassword"] {
+    -webkit-text-security: none;
+    text-security: none;
+    font-family: inherit;
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #3d3d3d;
+    border-radius: 5px;
+    background-color: #1e1e1e;
+    color: white;
+}
+
+div {
+    position: relative;
+}
+
+#togglePassword, #toggleConfirmPassword {
+    position: absolute;
+    top: 59%;
+    left: 90%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    width: 1.1vw;
+    pointer-events: all;
+}
+
 button {
     width: 100%;
     padding: 10px;
