--- a/views/pages/reset-password.twig
+++ b/views/pages/reset-password.twig
@@ -11,10 +11,16 @@
 {% block main %}
 	<form id="resetPasswordForm">
 		<input type="hidden" id="token" name="token" value="{{ token }}">
-		<label for="newPassword">Nouveau mot de passe :</label>
-		<input type="password" id="newPassword" name="newPassword" placeholder="Entrez votre nouveau mot de passe" required>
-		<label for="confirmPassword">Confirmez le mot de passe :</label>
-		<input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirmez votre mot de passe" required>
+		<div>
+			<label for="newPassword">Nouveau mot de passe :</label>
+			<input id="newPassword" type="password" name="newPassword" placeholder="Entrez votre nouveau mot de passe" required>
+			<img id="togglePassword" src="/../../assets/imgs/oeil.png" alt="Afficher/Masquer le mot de passe" aria-label="Afficher/Masquer le mot de passe">
+		</div>
+		<div>
+			<label for="confirmPassword">Confirmez le mot de passe :</label>
+			<input id="confirmPassword" type="password" name="confirmPassword" placeholder="Confirmez votre mot de passe" required>
+			<img id="toggleConfirmPassword" src="/../../assets/imgs/oeil.png" alt="Afficher/Masquer le mot de passe" aria-label="Afficher/Masquer le mot de passe">
+		</div>
 		<button type="submit">Réinitialiser le mot de passe</button>
 		<a href="/login">Annuler</a>
 	</form>
@@ -25,6 +31,24 @@
 {% block script %}
 <script type="module">
     import { handleFetch } from '/../../assets/js/error.js';
+
+   function togglePasswordVisibility(inputId, toggleId) {
+    const passwordInput = document.getElementById(inputId); 
+    const toggleImage = document.getElementById(toggleId); 
+    const isPassword = passwordInput.type === 'password';  
+    
+    passwordInput.type = isPassword ? 'text' : 'password';
+
+    toggleImage.src = isPassword ? '/../../assets/imgs/oeilBarrer.png' : '/../../assets/imgs/oeil.png';
+}
+
+document.getElementById('togglePassword').addEventListener('click', () => {
+    togglePasswordVisibility('newPassword', 'togglePassword');
+});
+
+document.getElementById('toggleConfirmPassword').addEventListener('click', () => {
+    togglePasswordVisibility('confirmPassword', 'toggleConfirmPassword');
+});
 
     document.getElementById('resetPasswordForm').addEventListener('submit', (event) => {
         event.preventDefault(); 
