--- a/views/pages/home.twig
+++ b/views/pages/home.twig
@@ -12,7 +12,7 @@
 	{% include "../partials/header.twig" %}
 	<div class="headerRes">
 		<section>
-			<a href="/personalContent"><img src="{{ users.picture }}" alt="Photo de profil" class="profile-pic" onerror="this.src='/../../assets/imgs/addPics.png'"/></a>
+			<a href="/personalContent"><img src="{{ users.picture }}" alt="Photo de profil" class="profile-pic" onerror="this.src='/../../assets/imgs/Pp.webp'"/></a>
 		</section>
 	</div>
 	<section>
