--- a/public/assets/css/profil.css
+++ b/public/assets/css/profil.css
@@ -102,6 +102,7 @@ main {
     color: aquamarine;
     font-weight: bold;
     margin-bottom: 5px;
+    margin-left: 2px;
     font-size: 1.3em;
 }
 
