--- a/public/assets/css/profil.css
+++ b/public/assets/css/profil.css
@@ -13,7 +13,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    background-color: #333;
+    background-color: #1e1e1e;
     display: flex;
     align-items: center;
     justify-content: space-between;
