--- a/public/assets/css/friends.css
+++ b/public/assets/css/friends.css
@@ -12,7 +12,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between; 
-    padding: 5px; 
+    padding: 10px; 
     width: 100%; 
     border-bottom: 1px solid #3d3d3d;
 }
@@ -40,9 +40,9 @@ h1 {
 
 .addFriend {
     cursor: pointer; 
-    width: 20px; 
-    height: 20px;
-    border-radius: 50%; 
+    width: 25px; 
+    height: 25px;
+   margin-right: 10px;
 }
 
 .container {
