--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -107,6 +107,14 @@ main {
     margin-top: 10px;
 }
 
+.container video {
+    width: 100%; 
+    max-width: 600px; 
+    height: 300px; 
+    object-fit: cover; 
+}
+
+
 .container li:hover {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
     transition: box-shadow 0.3s ease-in-out;
@@ -193,13 +201,9 @@ h1 {
     color: white;
     font-weight: bold;
     user-select: none;
-    /* Désactive la sélection de texte */
     -webkit-user-select: none;
-    /* Safari, Chrome */
     -moz-user-select: none;
-    /* Firefox */
     -ms-user-select: none;
-    /* IE */
 }
 
 .like-section,
@@ -223,12 +227,10 @@ h1 {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    /* Fond transparent */
     display: none;
     justify-content: center;
     align-items: center;
     z-index: 999;
-    /* Modal doit être derrière la croix */
 }
 
 .close {
@@ -239,7 +241,11 @@ h1 {
     color: #000;
     cursor: pointer;
     z-index: 1000;
-    /* Croissant un z-index élevé pour qu'elle soit devant la modal */
+}
+
+.author {
+    display: flex;
+    align-items: center;
 }
 
 .comments-container {
@@ -290,13 +296,27 @@ h1 {
     border-radius: 5px;
     cursor: pointer;
     display: block;
-    /* Pour s'assurer qu'il prend toute la largeur disponible */
     margin: 10px auto 0 auto;
-    /* Centre horizontalement avec auto */
 }
 
-
 .comment-form button:hover {
+    background-color: #0056b3;
+}
+
+strong{
+    color: aquamarine;
+}
+
+.save-comment-btn{
+    background-color: #88c0fc;
+    color: #000;
+    border: none;
+    padding: 3px 12px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.save-comment-btn:hover{
     background-color: #0056b3;
 }
 
@@ -439,7 +459,6 @@ h1 {
     display: none;
     position: fixed;
     top: 10px;
-    /* Affiche le logo près du haut */
     left: 50%;
     transform: translateX(-50%);
     z-index: 1000;
