--- a/public/assets/css/welcome.css
+++ b/public/assets/css/welcome.css
@@ -71,6 +71,16 @@ body {
     font-weight: bold;
 }
 
+h1{
+    margin-top: 20px;
+    font-size: 2.5rem;
+}
+
+h2{
+    font-size: 2.5rem;
+    margin-bottom: 30px;
+}
+
 section {
     color: white;
     text-align: center;
@@ -324,13 +334,12 @@ video {
         width: 950px;
     }
 
-    h2,
+    h1,h2,
     h3 {
         font-size: 2rem;
         font-family: "Bebas Neue", serif;
         font-weight: 400;
         font-style: normal;
-
         margin-bottom: 40px;
     }
 
