--- a/views/layouts/base.twig
+++ b/views/layouts/base.twig
@@ -16,6 +16,10 @@
 		<link rel="icon" href="/../../assets/imgs/LogoBlackRemoveBg.png" type="logoPulse">
 		<style>
 			@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue &family=Mogra&display=swap');
+			@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+			body {
+				font-family: 'Lato', sans-serif;
+			}
 		</style>
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
