update css collaboration space

--- a/views/pages/addContent.twig
+++ b/views/pages/addContent.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block title %}
-	<title>Ajouter un projet</title>
+	<title>Crée un post</title>
 {% endblock %}
 
 {% block main %}
