--- a/views/layouts/base.twig
+++ b/views/layouts/base.twig
@@ -26,7 +26,7 @@
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 		{% block style %}{% endblock %}
-		{% block title %}{% endblock %}
+		{% block title %}Pulse Connect{% endblock %}
 	</head>
 	<body>
 		{% block main %}{% endblock %}
