--- a/public/assets/css/collaboration.css
+++ b/public/assets/css/collaboration.css
@@ -542,7 +542,7 @@ form button[type="button"] {
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
     z-index: 1000;
     width: 300px;
-    max-width: 300px;
+    max-width: 240px;
     text-align: center;
     padding: 20px;
 }
@@ -556,8 +556,9 @@ form button[type="button"] {
 
 .edit-file-btn {
     width: 100%;
-    padding: 10px 0;
+    padding: 5px 0;
     margin: 10px 0;
+    margin-top: 25px;
     background-color: aquamarine;
     color: rgb(0, 0, 0);
     border: none;
@@ -656,20 +657,28 @@ form button[type="button"] {
 }
 
 .confirm-delete {
-    background-color: red;
+    background-color: red !important;
     color: white;
     padding: 10px 20px;
     border: none;
     cursor: pointer;
 }
 
+.confirm-delete:hover {
+    background-color: #bd4935 !important;
+}
+
 .cancel-delete {
-    background-color: gray;
+    background-color: aquamarine;
     color: white;
     padding: 10px 20px;
     border: none;
     cursor: pointer;
     margin-left: 10px;
+}
+
+.cancel-delete:hover {
+    background-color: #2bc2d9 !important;
 }
 
 input[type="file"] {
