--- a/public/assets/css/messagerie.css
+++ b/public/assets/css/messagerie.css
@@ -102,7 +102,11 @@ img {
 
 .user-item span {
     display: block;
+    min-width: 250px;
     text-align: left;
+    overflow: hidden; 
+    white-space: nowrap; 
+    text-overflow: ellipsis;
 }
 
 .modal {
@@ -213,6 +217,10 @@ img {
 
     .user-item {
         justify-content: center;
+    }
+
+    .user-item span {
+        max-width: 250px ;
     }
 
     .menu-icon {
