--- a/views/partials/header.twig
+++ b/views/partials/header.twig
@@ -49,7 +49,7 @@
 				<button id="publishPostButton">Publier du contenu</button>
 			</li>
             <li>
-				<button id="createSpaceButton">Créer un espace de collaboration</button>
+				<button id="createSpaceButton">Créer une collaboration</button>
 			</li>
 		</ul>
 	</div>
