--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -22,6 +22,7 @@ body {
     padding: 10px 20px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     z-index: 1000;
+    transition: top 0.5s;
 }
 
 .headerRes section {
@@ -547,7 +548,7 @@ strong{
     background-color: #444;
     border: none;
     border-radius: 4px;
-    color: white;
+    color: gray;
     padding: 10px 20px;
     margin: 10px 0;
     cursor: pointer;
