--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -53,10 +53,14 @@ select {
     margin-bottom: 10px;
     border: 1px solid #444;
     border-radius: 5px;
-    background-color: #000;
+    background-color: #000 !important;
     color: white;
     font-size: 1em;
 }
+
+input:valid {
+    background-color: black; /* Fond noir même si la valeur est valide */
+  }
 
 input::placeholder {
     color: #aaa;
