--- a/views/pages/messagerie.twig
+++ b/views/pages/messagerie.twig
@@ -32,9 +32,9 @@
 	</div>
 	<div id="deleteConversationModal" class="modal">
 		<div class="modal-content">
-			<h3>Supprimer la conversation</h3>
-			<p>Êtes-vous sûr de vouloir supprimer cette conversation ?</p>
-			<button id="confirmDeleteButton">Supprimer</button>
+			<span class="close-button" id="closeModal">×</span>
+			<p>Que souhaitez-vous faire ?</p>
+			<button id="confirmDeleteButton">Supprimer</button><br>
 			<button id="cancelDeleteButton">Annuler</button>
 		</div>
 	</div>
