--- a/views/pages/collaboration.twig
+++ b/views/pages/collaboration.twig
@@ -113,7 +113,7 @@
 								<audio id="audioPreview" style="display: none; max-width: 100%; margin: 10px 0;" controls></audio>
 							</div>
 						</div>
-						<button type="submit">Ajouter</button>
+						<button id="addFile" type="submit">Ajouter</button>
 					</form>
 					<h3>Participants</h3>
 					<ul>
