--- a/views/pages/messagerie.twig
+++ b/views/pages/messagerie.twig
@@ -32,7 +32,7 @@
 	</div>
 	<div id="deleteConversationModal" class="modal">
     <div class="modal-content">
-        <span class="close-button" id="closeModal">×</span>
+        <span class="close-button" id="closeModal" onclick="closeModal()">x</span>
         <p>Que souhaitez-vous faire ?</p>
         <button id="confirmDeleteButton">Supprimer</button><br>
         <button id="cancelDeleteButton">Annuler</button>
